corrected loader z-index

--- a/src/App.css
+++ b/src/App.css
@@ -150,7 +150,7 @@ tr:nth-child(even) {
   width: 100%;
   height: 100%;
   background-color: #3786ff;
-  z-index: 100;
+  z-index: 10000;
   transition: all .3s;
   animation: loader .7s ease-in-out alternate;
   animation-iteration-count: 1;
@@ -165,7 +165,7 @@ tr:nth-child(even) {
   width: 100%;
   height: 100%;
   background-color: #ffffff;
-  z-index: 100;
+  z-index: 10000;
   transition: all .3s;
   animation: loader .4s ease-in-out alternate;
   animation-iteration-count: 1;
